<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logotype" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inria_sans_light"
        android:text="@string/welcome_register_or_log_in_to_access_the_best_marketplace_of_farm_products"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_below="@id/welcomeText"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_back"
        android:text="@string/registration" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:minHeight="60dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inria_sans_light"
        android:text="@string/i_forgot_password"
        android:textColor="@color/grey"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="22sp"/>
</RelativeLayout>
